# XSystem

./: CMakeLists.txt  LICENSE
CMake/: XSystem.cmake
Kernel/: CMakeLists.txt
Kernel/include/XSystem/: XSystem.h
Kernel/include/XSystem.kernel/: XSystem.h  ini.h
Kernel/src/: general.h  main.cpp
Kernel/src/ini_parser/: ini_parser.cpp  ini_parser.h
Kernel/src/ini_parser/api/: ini_parser_api.cpp  ini_parser_api.h
Kernel/src/kernel/: kernel.cpp  kernel.h
SDK/: CMakeLists.txt
SDK/include/XSystem/: Loader.h  XSystem.h
SDK/src/: general.h  main.cpp
SDK/src/Loader/: Loader.cpp
